syntax = "proto3";

package master;

service Master {
  rpc put_file(FileRequest) returns (PutFileResponse);
}

message FileRequest{
    string fileName=1;
    int32 fileSize=2;
}

message PutFileResponse{
    repeated MetaServerBlocks blocks =1 ;
}

message MetaServerBlocks{
   string block_id =1;
   repeated MetaBlockInfo block_addr = 2;
}

message MetaBlockInfo{
  string ip = 1;
  int32 port = 2;
}